# libminisign

./: CMakeLists.txt  LICENSE  README.md  example.cpp  minisign.pc.in
cmake/: config-minisign.h.cmake  minisignConfig.cmake.in
include/minisign/: globals.h  minisign.h
src/: core.c  core.h  globals.c  helpers.c  helpers.h  minisign.c
tests/: the_best_test.cpp
tools/: sign-keygen.c  sign-verify.c  sign.c
